Colaboratory를 통해 생성됨

--- a/R수업02_자료형.ipynb
+++ b/R수업02_자료형.ipynb
@@ -6,7 +6,7 @@
       "name": "R수업02-자료형.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOhHrxcytY57+AYPwRq3BHS",
+      "authorship_tag": "ABX9TyObyo7XWdApIcCabMmoDlwm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1374,6 +1374,296 @@
               "width": 420,
               "height": 420
             }
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qjp8NHbcdlm7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 646
+        },
+        "outputId": "3e037a41-d5a9-4bea-a037-bf8acfb15874"
+      },
+      "source": [
+        "winter <- read.csv('https://raw.githubusercontent.com/stv0117/R_Statistics-Public-/master/datasets/wintermedals.csv')\n",
+        "summer <- read.csv('https://raw.githubusercontent.com/stv0117/R_Statistics-Public-/master/datasets/summermedals.csv')\n",
+        "employee <- read.csv('https://raw.githubusercontent.com/stv0117/R_Statistics-Public-/master/datasets/EMPLOYEES.csv')\n",
+        "\n",
+        "summary(winter)\n",
+        "str(winter)\n",
+        "colSums(is.na(winter))"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "      Year                  City             Sport     \n",
+              " Min.   :1924   Sochi         : 612   Biathlon  : 420  \n",
+              " 1st Qu.:1972   Turin         : 531   Bobsleigh : 452  \n",
+              " Median :1994   Vancouver     : 529   Curling   : 172  \n",
+              " Mean   :1986   Salt Lake City: 481   Ice Hockey:1536  \n",
+              " 3rd Qu.:2006   Nagano        : 447   Luge      : 180  \n",
+              " Max.   :2014   Innsbruck     : 395   Skating   :1229  \n",
+              "                (Other)       :2775   Skiing    :1781  \n",
+              "                Discipline                     Athlete        Country    \n",
+              " Ice Hockey          :1536   BJOERNDALEN, Ole Einar:  13   USA    : 653  \n",
+              " Cross Country Skiing: 789   DAEHLIE, Björn        :  12   CAN    : 625  \n",
+              " Speed skating       : 580   BELMONDO, Stefania    :  10   NOR    : 457  \n",
+              " Alpine Skiing       : 428   SMETANINA, Raisa      :  10   URS    : 440  \n",
+              " Bobsleigh           : 422   BJOERGEN, Marit       :   9   FIN    : 434  \n",
+              " Biathlon            : 420   DISL, Uschi           :   9   SWE    : 433  \n",
+              " (Other)             :1595   (Other)               :5707   (Other):2728  \n",
+              "   Gender               Event         Medal     \n",
+              " Men  :3944   Ice Hockey   :1536   Bronze:1919  \n",
+              " Women:1826   Four-Man     : 259   Gold  :1921  \n",
+              "              4X10KM Relay : 228   Silver:1930  \n",
+              "              Individual   : 222                \n",
+              "              4X7.5KM Relay: 201                \n",
+              "              Curling      : 172                \n",
+              "              (Other)      :3152                "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "'data.frame':\t5770 obs. of  9 variables:\n",
+            " $ Year      : int  1924 1924 1924 1924 1924 1924 1924 1924 1924 1924 ...\n",
+            " $ City      : Factor w/ 19 levels \"Albertville\",..: 3 3 3 3 3 3 3 3 3 3 ...\n",
+            " $ Sport     : Factor w/ 7 levels \"Biathlon\",\"Bobsleigh\",..: 1 1 1 1 1 1 1 1 1 1 ...\n",
+            " $ Discipline: Factor w/ 15 levels \"Alpine Skiing\",..: 2 2 2 2 2 2 2 2 2 2 ...\n",
+            " $ Athlete   : Factor w/ 3761 levels \"AAHLBERG, Mats\",..: 285 2081 2082 3471 153 1500 1501 3482 386 820 ...\n",
+            " $ Country   : Factor w/ 45 levels \"AUS\",\"AUT\",\"BEL\",..: 16 16 16 16 37 37 37 37 15 15 ...\n",
+            " $ Gender    : Factor w/ 2 levels \"Men\",\"Women\": 1 1 1 1 1 1 1 1 1 1 ...\n",
+            " $ Event     : Factor w/ 83 levels \"10000M\",\"1000M\",..: 58 58 58 58 58 58 58 58 58 58 ...\n",
+            " $ Medal     : Factor w/ 3 levels \"Bronze\",\"Gold\",..: 1 1 1 1 2 2 2 2 3 3 ...\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "      Year       City      Sport Discipline    Athlete    Country     Gender \n",
+              "         0          0          0          0          0          0          0 \n",
+              "     Event      Medal \n",
+              "         0          0 "
+            ],
+            "text/latex": "\\begin{description*}\n\\item[Year] 0\n\\item[City] 0\n\\item[Sport] 0\n\\item[Discipline] 0\n\\item[Athlete] 0\n\\item[Country] 0\n\\item[Gender] 0\n\\item[Event] 0\n\\item[Medal] 0\n\\end{description*}\n",
+            "text/markdown": "Year\n:   0City\n:   0Sport\n:   0Discipline\n:   0Athlete\n:   0Country\n:   0Gender\n:   0Event\n:   0Medal\n:   0\n\n",
+            "text/html": [
+              "<style>\n",
+              ".dl-inline {width: auto; margin:0; padding: 0}\n",
+              ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+              ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+              ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+              "</style><dl class=dl-inline><dt>Year</dt><dd>0</dd><dt>City</dt><dd>0</dd><dt>Sport</dt><dd>0</dd><dt>Discipline</dt><dd>0</dd><dt>Athlete</dt><dd>0</dd><dt>Country</dt><dd>0</dd><dt>Gender</dt><dd>0</dd><dt>Event</dt><dd>0</dd><dt>Medal</dt><dd>0</dd></dl>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "52-oNElnefhf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 646
+        },
+        "outputId": "14bfb923-778a-4dda-c3f4-7862d185dc95"
+      },
+      "source": [
+        "summary(summer)\n",
+        "str(summer)\n",
+        "colSums(is.na(summer))"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "      Year               City              Sport             Discipline   \n",
+              " Min.   :1896   London     : 3567   Aquatics  : 4170   Athletics  : 3638  \n",
+              " 1st Qu.:1948   Athens     : 2149   Athletics : 3638   Rowing     : 2667  \n",
+              " Median :1980   Los Angeles: 2074   Rowing    : 2667   Swimming   : 2628  \n",
+              " Mean   :1970   Beijing    : 2042   Gymnastics: 2307   Artistic G.: 2103  \n",
+              " 3rd Qu.:2000   Sydney     : 2015   Fencing   : 1613   Fencing    : 1613  \n",
+              " Max.   :2012   Atlanta    : 1859   Football  : 1497   Football   : 1497  \n",
+              "                (Other)    :17459   (Other)   :15273   (Other)    :17019  \n",
+              "                 Athlete         Country        Gender     \n",
+              " PHELPS, Michael     :   22   USA    : 4585   Men  :22746  \n",
+              " LATYNINA, Larisa    :   18   URS    : 2049   Women: 8419  \n",
+              " ANDRIANOV, Nikolay  :   15   GBR    : 1720                \n",
+              " MANGIAROTTI, Edoardo:   13   FRA    : 1396                \n",
+              " ONO, Takashi        :   13   GER    : 1305                \n",
+              " SHAKHLIN, Boris     :   13   ITA    : 1296                \n",
+              " (Other)             :31071   (Other):18814                \n",
+              "              Event          Medal      \n",
+              " Football        : 1497   Bronze:10369  \n",
+              " Hockey          : 1422   Gold  :10486  \n",
+              " Team Competition: 1147   Silver:10310  \n",
+              " Basketball      : 1012                 \n",
+              " Handball        :  973                 \n",
+              " Water Polo      :  958                 \n",
+              " (Other)         :24156                 "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "'data.frame':\t31165 obs. of  9 variables:\n",
+            " $ Year      : int  1896 1896 1896 1896 1896 1896 1896 1896 1896 1896 ...\n",
+            " $ City      : Factor w/ 22 levels \"Amsterdam\",\"Antwerp\",..: 3 3 3 3 3 3 3 3 3 3 ...\n",
+            " $ Sport     : Factor w/ 43 levels \"Aquatics\",\"Archery\",..: 1 1 1 1 1 1 1 1 1 1 ...\n",
+            " $ Discipline: Factor w/ 67 levels \"Archery\",\"Artistic G.\",..: 50 50 50 50 50 50 50 50 50 50 ...\n",
+            " $ Athlete   : Factor w/ 22762 levels \"AABYE, Edgar\",..: 7412 8021 4894 12438 3157 3339 7412 503 3339 14271 ...\n",
+            " $ Country   : Factor w/ 148 levels \"\",\"AFG\",\"AHO\",..: 60 9 54 54 54 54 60 54 54 9 ...\n",
+            " $ Gender    : Factor w/ 2 levels \"Men\",\"Women\": 1 1 1 1 1 1 1 1 1 1 ...\n",
+            " $ Event     : Factor w/ 666 levels \"- 47.63KG (Flyweight)\",..: 79 79 80 80 80 105 105 105 162 162 ...\n",
+            " $ Medal     : Factor w/ 3 levels \"Bronze\",\"Gold\",..: 2 3 1 2 3 1 2 3 1 2 ...\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "      Year       City      Sport Discipline    Athlete    Country     Gender \n",
+              "         0          0          0          0          0          0          0 \n",
+              "     Event      Medal \n",
+              "         0          0 "
+            ],
+            "text/latex": "\\begin{description*}\n\\item[Year] 0\n\\item[City] 0\n\\item[Sport] 0\n\\item[Discipline] 0\n\\item[Athlete] 0\n\\item[Country] 0\n\\item[Gender] 0\n\\item[Event] 0\n\\item[Medal] 0\n\\end{description*}\n",
+            "text/markdown": "Year\n:   0City\n:   0Sport\n:   0Discipline\n:   0Athlete\n:   0Country\n:   0Gender\n:   0Event\n:   0Medal\n:   0\n\n",
+            "text/html": [
+              "<style>\n",
+              ".dl-inline {width: auto; margin:0; padding: 0}\n",
+              ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+              ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+              ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+              "</style><dl class=dl-inline><dt>Year</dt><dd>0</dd><dt>City</dt><dd>0</dd><dt>Sport</dt><dd>0</dd><dt>Discipline</dt><dd>0</dd><dt>Athlete</dt><dd>0</dd><dt>Country</dt><dd>0</dd><dt>Gender</dt><dd>0</dd><dt>Event</dt><dd>0</dd><dt>Medal</dt><dd>0</dd></dl>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y5RWhVsVe78X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 682
+        },
+        "outputId": "7db828d7-996b-475d-a2c8-0a14ed2b7a24"
+      },
+      "source": [
+        "summary(employee)\n",
+        "str(employee)\n",
+        "colSums(is.na(employee))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "  EMPLOYEE_ID        FIRST_NAME     LAST_NAME       EMAIL    \n",
+              " Min.   :100.0   David    : 3   Cambrault: 2   ABANDA  :  1  \n",
+              " 1st Qu.:126.5   John     : 3   Grant    : 2   ABULL   :  1  \n",
+              " Median :153.0   Peter    : 3   King     : 2   ACABRIO :  1  \n",
+              " Mean   :153.0   Alexander: 2   Smith    : 2   AERRAZUR:  1  \n",
+              " 3rd Qu.:179.5   James    : 2   Taylor   : 2   AFRIPP  :  1  \n",
+              " Max.   :206.0   Jennifer : 2   Abel     : 1   AHUNOLD :  1  \n",
+              "                 (Other)  :92   (Other)  :96   (Other) :101  \n",
+              "             PHONE_NUMBER      HIRE_DATE         JOB_ID       SALARY     \n",
+              " 011.44.1343.329268:  1   2002-06-07: 4   SA_REP    :30   Min.   : 2100  \n",
+              " 011.44.1343.529268:  1   2005-03-10: 2   SH_CLERK  :20   1st Qu.: 3100  \n",
+              " 011.44.1343.629268:  1   2005-08-20: 2   ST_CLERK  :20   Median : 6200  \n",
+              " 011.44.1343.729268:  1   2006-01-24: 2   FI_ACCOUNT: 5   Mean   : 6462  \n",
+              " 011.44.1343.829268:  1   2007-02-07: 2   IT_PROG   : 5   3rd Qu.: 8900  \n",
+              " 011.44.1343.929268:  1   2007-06-21: 2   PU_CLERK  : 5   Max.   :24000  \n",
+              " (Other)           :101   (Other)   :93   (Other)   :22                  \n",
+              " COMMISSION_PCT     MANAGER_ID    DEPARTMENT_ID   \n",
+              " Min.   :0.1000   Min.   :100.0   Min.   : 10.00  \n",
+              " 1st Qu.:0.1500   1st Qu.:108.0   1st Qu.: 50.00  \n",
+              " Median :0.2000   Median :122.0   Median : 50.00  \n",
+              " Mean   :0.2229   Mean   :124.8   Mean   : 63.21  \n",
+              " 3rd Qu.:0.3000   3rd Qu.:145.0   3rd Qu.: 80.00  \n",
+              " Max.   :0.4000   Max.   :205.0   Max.   :110.00  \n",
+              " NA's   :72       NA's   :1       NA's   :1       "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "'data.frame':\t107 obs. of  11 variables:\n",
+            " $ EMPLOYEE_ID   : int  100 101 102 103 104 105 106 107 108 109 ...\n",
+            " $ FIRST_NAME    : Factor w/ 91 levels \"Adam\",\"Alana\",..: 80 64 51 4 11 18 88 20 61 16 ...\n",
+            " $ LAST_NAME     : Factor w/ 102 levels \"Abel\",\"Ande\",..: 50 51 20 44 24 4 74 57 38 27 ...\n",
+            " $ EMAIL         : Factor w/ 107 levels \"ABANDA\",\"ABULL\",..: 90 74 61 6 11 17 104 23 73 19 ...\n",
+            " $ PHONE_NUMBER  : Factor w/ 107 levels \"011.44.1343.329268\",..: 37 38 39 58 59 60 57 61 50 45 ...\n",
+            " $ HIRE_DATE     : Factor w/ 98 levels \"2001-01-13\",\"2002-06-07\",..: 8 40 1 49 79 34 51 73 4 3 ...\n",
+            " $ JOB_ID        : Factor w/ 19 levels \"AC_ACCOUNT\",\"AC_MGR\",..: 4 5 5 9 9 9 9 9 7 6 ...\n",
+            " $ SALARY        : int  24000 17000 17000 9000 6000 4800 4800 4200 12008 9000 ...\n",
+            " $ COMMISSION_PCT: num  NA NA NA NA NA NA NA NA NA NA ...\n",
+            " $ MANAGER_ID    : int  NA 100 100 102 103 103 103 103 101 108 ...\n",
+            " $ DEPARTMENT_ID : int  90 90 90 60 60 60 60 60 100 100 ...\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "   EMPLOYEE_ID     FIRST_NAME      LAST_NAME          EMAIL   PHONE_NUMBER \n",
+              "             0              0              0              0              0 \n",
+              "     HIRE_DATE         JOB_ID         SALARY COMMISSION_PCT     MANAGER_ID \n",
+              "             0              0              0             72              1 \n",
+              " DEPARTMENT_ID \n",
+              "             1 "
+            ],
+            "text/latex": "\\begin{description*}\n\\item[EMPLOYEE\\textbackslash{}\\_ID] 0\n\\item[FIRST\\textbackslash{}\\_NAME] 0\n\\item[LAST\\textbackslash{}\\_NAME] 0\n\\item[EMAIL] 0\n\\item[PHONE\\textbackslash{}\\_NUMBER] 0\n\\item[HIRE\\textbackslash{}\\_DATE] 0\n\\item[JOB\\textbackslash{}\\_ID] 0\n\\item[SALARY] 0\n\\item[COMMISSION\\textbackslash{}\\_PCT] 72\n\\item[MANAGER\\textbackslash{}\\_ID] 1\n\\item[DEPARTMENT\\textbackslash{}\\_ID] 1\n\\end{description*}\n",
+            "text/markdown": "EMPLOYEE_ID\n:   0FIRST_NAME\n:   0LAST_NAME\n:   0EMAIL\n:   0PHONE_NUMBER\n:   0HIRE_DATE\n:   0JOB_ID\n:   0SALARY\n:   0COMMISSION_PCT\n:   72MANAGER_ID\n:   1DEPARTMENT_ID\n:   1\n\n",
+            "text/html": [
+              "<style>\n",
+              ".dl-inline {width: auto; margin:0; padding: 0}\n",
+              ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+              ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+              ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+              "</style><dl class=dl-inline><dt>EMPLOYEE_ID</dt><dd>0</dd><dt>FIRST_NAME</dt><dd>0</dd><dt>LAST_NAME</dt><dd>0</dd><dt>EMAIL</dt><dd>0</dd><dt>PHONE_NUMBER</dt><dd>0</dd><dt>HIRE_DATE</dt><dd>0</dd><dt>JOB_ID</dt><dd>0</dd><dt>SALARY</dt><dd>0</dd><dt>COMMISSION_PCT</dt><dd>72</dd><dt>MANAGER_ID</dt><dd>1</dd><dt>DEPARTMENT_ID</dt><dd>1</dd></dl>\n"
+            ]
+          },
+          "metadata": {
+            "tags": []
           }
         }
       ]
